fix social header on small devices

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -255,6 +255,15 @@ img {
   border: 1px solid var(--light-grey);
 }
 
+@media only screen and (max-width: 58em) {
+    .main-social img {
+    width: 30px;
+    height: 30px;
+    margin: 0.75em;
+}
+}
+
+
 
 /*project-seiten allgemein*/
 
